security/base/zitadel/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: zitadel
spec:
  parentRefs:
    - name: zitadel
  hostnames:
    - "auth.${domain_name}"
  rules:
    - backendRefs:
        - name: zitadel
          port: 8080
