security/base/zitadel/tlsroute.yaml
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: TLSRoute
metadata:
  name: zitadel
spec:
  parentRefs:
    - name: zitadel
  hostnames:
    - "auth.${public_domain_name}"
  rules:
    - backendRefs:
        - name: zitadel
          port: 8080
