security/base/zitadel/network-policy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: zitadel
spec:
  description: "Allow internal traffic to the Zitadel service."
  endpointSelector:
    matchLabels:
      k8s:app.kubernetes.io/name: zitadel
  egress:
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: kube-system
            k8s:k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
            - port: "53"
              protocol: TCP
    - toEntities:
        - world
      toPorts:
        - ports:
            - port: "80"
              protocol: TCP
            - port: "443"
              protocol: TCP
    - toEndpoints:
        - matchLabels:
            k8s:cnpg.io/cluster: xplane-zitadel-cnpg-cluster
      toPorts:
        - ports:
            - port: "5432"
              protocol: TCP
  ingress:
    - fromEntities:
        - ingress
      toPorts:
        - ports:
            - port: "8080"
              protocol: TCP
